--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,291 @@
-/* место для вашего кода */
+/*=== HEADER ===*/
+.header {
+display:grid;
+position: relative;
+grid-template-columns:1fr min-content 1fr;
+align-items: center;
+gap: 20px;
+padding: 90px 50px;
+color: #000;
+}
+
+.header__menu .header__links-list{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap:32px ;
+  align-items: center;
+  list-style:circle;
+}
+
+.header__links-list-item{
+  margin: 0;
+  padding: 0;
+}
+
+.header__link{
+ color: black;
+ text-decoration-thickness: 1px;
+ font-size: 18px;
+}
+
+.header__link_active{
+  text-decoration: none;
+}
+
+address {
+  font-style: normal;
+}
+
+.header__address{
+  display: flex;
+  flex-direction: column;
+  justify-self: end;
+  align-items: flex-start;
+  gap: 2px;
+  max-width: 240px;
+  flex-wrap: wrap;
+  font-size: 18px;
+}
+
+.footer__address a{
+  text-decoration: none;
+}
+
+.header__logo{
+  display: block;
+  justify-self: center;
+}
+
+.header__logo-image{
+  display: block;
+  width:139px;
+  height:auto;
+}
+
+/*==main==*/
+.cover{
+  position: relative;
+  overflow: hidden;
+  background-image: url('../images/cover.jpg');
+  background-size: cover;
+  min-height: 757px;
+  background-position: center;
+  padding: 5px 1px 50px;
+}
+
+.overlay{
+  position: absolute;
+  inset: 0;
+  background-color:rgba(0,0,0, 0.5);
+  z-index: 1;
+
+}
+
+.cover__title{
+  position: relative;
+  z-index: 2;
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 1.15;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 165px 50px;
+}
+
+.aligned-text{
+  display: block;
+  letter-spacing: 30px;
+  line-height: 1.30;
+}
+
+.aligned-text_right{
+  text-align: right;
+}
+
+.aligned-text_center{
+  text-align: center;
+}
+
+.aligned-text_left{
+  text-align: left;
+}
+
+.cover__description{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1000px;
+  text-transform: uppercase;
+  }
+
+.cover__description-text{
+  font-size: 22px;
+  line-height: 28px;
+  color: #fff;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  word-spacing: 20px;
+  z-index: 2;
+  margin-left: 45px;
+}
+
+.bet-button{
+  display: inline-block;
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding: 15px 30px;
+  border-radius: 0;
+  cursor: pointer;
+  text-transform: uppercase;
+  color: #fff;
+  z-index: 2;
+}
+
+.lots{
+  padding: 150px 50px;
+}
+
+.lots__heading{
+  font-size: 40px;
+  text-decoration: none;
+  text-transform: uppercase;
+  line-height: 100%;
+  margin-bottom: 27px;
+}
+
+.lots__card-list{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 40px;
+}
+
+.lots__card-list-item{
+  width: 334px;
+  min-height: 596px;
+}
+
+.card-link{
+  text-decoration: none;
+  color: #fff;
+}
+
+.card{
+  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 15px 27px 82px;
+}
+
+.card_type_film{
+  background-image: url(../images/card-lot-01.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_book{
+  background-image: url(../images/card-lot-02.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_picture{
+  background-image: url(../images/card-lot-03.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card__title{
+  color: #fff;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 120%;
+  text-transform: uppercase;
+  text-decoration: underline;
+  z-index: 2;
+}
+
+.card__text{
+  color: #fff;
+  font-size: 20px;
+  line-height: 120%;
+  z-index: 2;
+}
+
+.lots__look-more-link{
+  font-size: 20px;
+  line-height: 100%;
+  color: #000;
+  display: block;
+  margin-left: 40px;
+  margin-top: 40px;
+}
+
+.about{
+  padding: 60px 25px;
+  display: grid;
+  grid-template-columns:334px 1fr;
+  gap: 25px;
+}
+
+.about__logo{
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+}
+
+.about__title{
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 50px;
+}
+
+.about__text{
+  font-size: 20px;
+  line-height: 24px;
+  display: flex;
+  flex-direction: column;
+  gap:23px;
+  padding: 55px 1px;
+}
+
+.footer{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding: 150px 50px;
+}
+
+.footer__social-icon{
+  width: 48px;
+  height: 48px;
+}
+
+.footer__social-list{
+  display: flex;
+  gap: 48px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.footer__menu-list{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.footer__address{
+  display: grid;
+  justify-self: start;
+  padding: 10px 10px 10px;
+}
