--- a/styles/style.css
+++ b/styles/style.css
@@ -238,6 +238,7 @@ address {
   justify-content: center;
   background-color: #000;
   margin-left: 47px;
+  margin-top: -100px;
 }
 
 .about__column{
