--- a/styles/style.css
+++ b/styles/style.css
@@ -1,83 +1,86 @@
 /*=== HEADER ===*/
 .header {
-display:grid;
-position: relative;
-grid-template-columns:1fr min-content 1fr;
-align-items: center;
-gap: 20px;
-padding: 90px 50px 96px;
-color: #000;
+  display: grid;
+  position: relative;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  gap: 20px;
+  padding: 90px 50px 96px;
+  color: #000;
 }
 
-.header__menu .header__links-list{
+.header__menu .header__links-list {
   margin: 0;
   padding: 0;
   display: flex;
-  gap:32px ;
+  gap: 32px;
   align-items: center;
-  list-style:circle;
 }
 
-.header__links-list-item{
+.header__links-list-item {
   margin: 0;
   padding: 0;
+  list-style: circle;
 }
 
-.header__link{
- color: black;
- text-decoration-thickness: 1px;
- font-size: 18px;
+.header__links-list-item_no-bullit {
+  list-style: none;
 }
 
-.header__link_active{
+.header__link {
+  color: black;
+  text-decoration-thickness: 1px;
+  font-size: 18px;
+}
+
+.header__link_active {
   text-decoration: none;
 }
 
-address {
+.address {
   font-style: normal;
   font-size: 18px;
   align-items: flex-start;
   gap: 2px;
   display: flex;
   flex-direction: column;
+  line-height: 24.3px;
+}
+
+.address-block__header {
+  max-width: 240px;
   justify-self: end;
 }
 
-.header__address{
-  max-width: 240px;
-}
-
-.header__logo{
+.header__logo {
   display: block;
   justify-self: center;
 }
 
-.header__logo-image{
+.header__logo-image {
   display: block;
-  width:139px;
-  height:auto;
+  width: 139px;
+  height: auto;
 }
 
 /*==main==*/
-.cover{
+.cover {
   position: relative;
-  overflow: hidden;
-  background-image: url('../images/cover.jpg');
+  background-image: url("../images/cover.jpg");
   background-size: cover;
   min-height: 757px;
   background-position: center;
-  padding:160px 50px 50px;
+  padding: 160px 50px 50px;
 }
 
-.overlay{
+.overlay {
   position: absolute;
   inset: 0;
-  background-color:rgba(0,0,0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 1;
-
 }
 
-.cover__title{
+.cover__title {
   position: relative;
   z-index: 2;
   font-size: 100px;
@@ -90,36 +93,36 @@ address {
   gap: 20px;
 }
 
-.aligned-text{
+.aligned-text {
   display: block;
   letter-spacing: 30px;
   line-height: 115px;
 }
 
-.aligned-text_right{
+.aligned-text_right {
   text-align: right;
   transform: translateX(30px);
 }
 
-.aligned-text_center{
+.aligned-text_center {
   text-align: center;
   transform: translateX(15px);
 }
 
-.aligned-text_left{
+.aligned-text_left {
   text-align: left;
 }
 
-.cover__description{
+.cover__description {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   max-width: 1000px;
   text-transform: uppercase;
-  }
+}
 
-.cover__description-text{
+.cover__description-text {
   font-size: 22px;
   line-height: 28px;
   color: #fff;
@@ -127,7 +130,7 @@ address {
   z-index: 2;
 }
 
-.bet-button{
+.bet-button {
   display: inline-block;
   background-color: transparent;
   border: 1px solid #fff;
@@ -140,11 +143,11 @@ address {
   font-size: 22px;
 }
 
-.lots{
+.lots {
   padding: 180px 24px 120px;
 }
 
-.lots__heading{
+.lots__heading {
   font-size: 40px;
   text-decoration: none;
   text-transform: uppercase;
@@ -152,52 +155,49 @@ address {
   margin-left: 40px;
 }
 
-.lots__card-list{
+.lots__card-list {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
   gap: 25px;
 }
 
-.lots__card-list-item{
+.lots__card-list-item {
   width: 334px;
   min-height: 596px;
 }
 
-.card-link{
+.card-link {
   text-decoration: none;
   color: #fff;
 }
 
-.card{
+.card {
   height: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 48px 40px;
+  background-position: center;
+  background-size: cover;
 }
 
-.card_type_film{
+.card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
-.card_type_book{
+.card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
-.card_type_picture{
+.card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
-.card__title{
+.card__title {
   color: #fff;
   font-size: 22px;
   font-weight: 700;
@@ -207,29 +207,30 @@ address {
   z-index: 2;
 }
 
-.card__text{
+.card__text {
   color: #fff;
   font-size: 20px;
   line-height: 120%;
   z-index: 2;
 }
 
-.lots__look-more-link{
+.lots__look-more-link {
   font-size: 20px;
   color: #000;
   display: block;
+  max-width: fit-content;
   margin-left: 40px;
   margin-top: 30px;
 }
 
-.about{
+.about {
   padding: 35px 25px 180px;
   display: grid;
-  grid-template-columns:334px 1fr;
+  grid-template-columns: 334px 1fr;
   gap: 25px;
 }
 
-.about__logo{
+.about__logo {
   width: 240px;
   height: 240px;
   border-radius: 50%;
@@ -241,38 +242,38 @@ address {
   margin-top: -100px;
 }
 
-.about__column{
+.about__column {
   padding-top: 98px;
 }
 
-.about__title{
+.about__title {
   font-size: 40px;
   text-transform: uppercase;
   margin-bottom: 100px;
 }
 
-.about__text{
+.about__text {
   font-size: 20px;
   line-height: 24px;
   display: flex;
   flex-direction: column;
-  gap:23px;
+  gap: 23px;
 }
 
-.footer{
+.footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
   margin-bottom: 82px;
-  padding:0 50px;
+  padding: 0 50px;
 }
 
-.footer__social-icon{
+.footer__social-icon {
   width: 48px;
   height: 48px;
 }
 
-.footer__social-list{
+.footer__social-list {
   display: flex;
   gap: 48px;
   margin: 0;
@@ -281,7 +282,7 @@ address {
   justify-content: flex-end;
 }
 
-.footer__menu-list{
+.footer__menu-list {
   list-style: none;
   font-size: 18px;
   margin: 0;
@@ -289,8 +290,11 @@ address {
   text-align: center;
 }
 
-.footer__address{
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.address-block__footer {
   display: grid;
   justify-self: start;
-  padding: 10px 10px 10px;
 }
